--- a/volunteer.html
+++ b/volunteer.html
@@ -193,7 +193,7 @@
     </ul>
   </div>
   <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-    <h2 class="footer-heading">Have a Questions?</h2>
+    <h2 class="footer-heading">Address</h2>
     <div class="block-23 mb-3">
       <ul>
         <li><span class="icon fa fa-map"></span><span class="text">1162, Sectore-19, Faridabad, Haryana (U.P), India</span></li>
