--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 				<div class="col-md-7 wrap-about py-5">
 					<div class="heading-section pr-md-5 pt-md-5">
 						<span class="subheading">Welcome to Janak Sewa Samiti</span>
-						<h2 class="mb-4">We Believe that We Can Save More Lifes with You</h2>
+						<h2 class="mb-4">We Believe that We Can Save More Lives with You</h2>
 						<p>A roof over their heads is a critical need of the elder who are destiture, sick and abandoned by family and those uprooted bby disasters.</p>
 					</div>
 					<div class="row my-md-5">
