--- a/about.html
+++ b/about.html
@@ -88,25 +88,46 @@
      <h2>Arun Mehta</h2>
      <div class="volunteer" align=center>
       <div class="img" style="background-image: url(images/Akarsh.png); width:250px; height:250px display:flexbox"></div>
-      <div class="text text-1" style="width:40%;">
+      <!-- <div class="text text-1" style="width:40%;">
        <span>President</span>
-     </div>
+     </div> -->
    </div>
-      <span class="subheading" style="color:#4B878BFF">Grow old along with me! <br> The best is yet to be,<br>The last of life, for which the first was made<br> -Robert Browing</span>
-      <br><br><span class="subheading">Greetings from Janak Sewa Samiti</span>
-      <br><div class="column-view" align="justify" style="color:#626567">It's with great pleasure and some amount of satisfaction that we bring this souvenir to you. Great pleasure-because the journey that began with the foundation of the Janak Sewa Samiti in 1975 is truly on course; and satisfaction as the Samiti has been able to offer its humble ahuti' in this 'yajna
+      <span class="subheading" style="color:#4B878BFF">President, Janak Sewa Samiti</span>
+      <br><span class="subheading">Greetings from Janak Sewa Samiti</span>
+      <br><div align="justify" style="color:#626567">It's with great pleasure and some amount of satisfaction that we bring this souvenir to you. Great pleasure-because the journey that began with the foundation of the Janak Sewa Samiti in 1975 is truly on course; and satisfaction as the Samiti has been able to offer its humble ahuti' in this 'yajna
 
 The present building at Plot no. 1162, sector 19, Faridabad, has been dedicated to the care of the old since 1996 and is fondly known as the Sneh Ashram. The Ashram can now home upto 50 senior citizens, made possible by recent expansions. Our endeavour is to provide a homely and friendly environment to enable senior citizens to lead their golden years with dignity and self-respect. The sight of these greying minds strolling in the gardens every morning inspires us. The residents of the Ashram eagerly look forward to outdoor excursions being regularly organised by the JSS team. Apart from the care of the old, the Samiti also caters to the needs of the poor. It adopts five families who have no known source of Income of their own and provides them complete ration for the whole year. The in-house dispensary manned by a qualified allopathic doctor provides services to the general public as well.</div>
+    <br><span class="subheading" style="color:#4B878BFF">Grow old along with me! <br> The best is yet to be,<br>The last of life, for which the first was made<br> -Robert Browing</span>
    </div>
  </div>
 
+ <!-- Message from Founder President - Janak Sewa Samiti  -->
 
-<h3 style="color:#4B878BFF; text-align:center"><br><b>Facilities provided by Sneh Aashram</br></b><br></br></h3>
- <div class="row">
+ <section class="ftco-section-about">
+  <div class="container">
+   <div class="row justify-content-center pb-5">
+     <div class="col-md-7 heading-section text-center ftco-animate">
+      <span class="subheading">Call from the founder President</span>
+      <hr style="width:30%;background-color:#5DADE2">
+      <h2>Perala Ratnam</h2>
+      <div class="volunteer" align=center>
+       <div class="img" style="background-image: url(images/Akarsh.png); width:250px; height:250px display:flexbox"></div>
+       <!-- <div class="text text-1" style="width:41%;">
+        <span>Founder President</span>
+      </div> -->
+    </div>
+       <span class="subheading" style="color:#4B878BFF">Founder President, Janak Sewa Samiti<br>H.E. Former Indian Ambassador</span>
+       <!-- <br><br><span class="subheading">Greetings from Janak Sewa Samiti</span> -->
+       <br><div align="justify" style="color:#626567">India is going through a crucial period of her history, tenaciously clinging to a fast sagging but an Inspiring socialist democracy. She is facing a serious challenge of her very existence as a free country. We should be prepared to meet the challenge with a deep sense of patriotism, complete dedication coupled with strict discipline and hard work. We should, for example, ruthlessly eradicate rampant corruption, sychophancy , etc.,which are eating into the very vitals of this nation and establish in its place an Impartial and Just government which can function genuinely in the interests of the people. This will make our country truly great. Please take serious note of the lessons of our history. If we fail to act now, history will not forgive us, and if we Succeed, history will not forget us</div>
+  </div>
+
+
+<h3 style="color:#4B878BFF; text-align:center"><br></br><br><b>Facilities provided by Sneh Aashram</br></b><br></h3>
+ <div class="row" style="height:390px">
   <div class="col-md-3 services-2 w-100 text-center">
    <div class="icon icon-1 d-flex align-items-center justify-content-center"><span class="fa fa-bed"></span></div>
    <div class="text">
-    <h4>Water</h4>
+    <h4>Dormitories</h4>
     <p>Furnished dormitories with attached toilets backed by 24-hour power and water supply.</p>
   </div>
 </div>
