--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
 							<div class="col-md-3">
 								<div class="dbox w-100 text-center">
 									<div class="icon bg-primary d-flex align-items-center justify-content-center">
-										<span class="fa fa-map-marker"></span>
+										<a href="https://goo.gl/maps/ZBbFcqoY5LL7cqfd8" target="_blank"><span class="fa fa-map-marker"></span></a>
 									</div>
 									<div class="text">
 										<p><span>Address:</span> 1162, Sectore-19, Faridabad, Haryana (U.P), India </p>
@@ -126,30 +126,30 @@
 							<div class="col-md-3">
 								<div class="dbox w-100 text-center">
 									<div class="icon bg-secondary d-flex align-items-center justify-content-center">
-										<span class="fa fa-phone"></span>
+										<a href="tel://0129-4101162"><span class="fa fa-phone"></span></a>
 									</div>
 									<div class="text">
-										<p><span>Phone:</span> <a href="tel://1234567920">0129-4101162</a></p>
+										<p><span>Phone:</span> <a href="tel://0129-4101162">0129-4101162</a></p>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-3">
 								<div class="dbox w-100 text-center">
 									<div class="icon bg-tertiary d-flex align-items-center justify-content-center">
-										<span class="fa fa-paper-plane"></span>
+										<a href="mailto:info@janaksewasamiti.in"><span class="fa fa-paper-plane"></span></a>
 									</div>
 									<div class="text">
-										<p><span>Email:</span> <a href="mailto:info@yoursite.com">info@janaksewasamiti.in</a></p>
+										<p><span>Email:</span> <a href="mailto:info@janaksewasamiti.in" target="_blank ">info@janaksewasamiti.in</a></p>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-3">
 								<div class="dbox w-100 text-center">
 									<div class="icon bg-quarternary d-flex align-items-center justify-content-center">
-										<span class="fa fa-globe"></span>
+										<a href="https://akarsh17.github.io/JanakSewaSamiti/contact.html" target="_blank"><span class="fa fa-globe"></span></a>
 									</div>
 									<div class="text">
-										<p><span>Website</span> <a href="#">janaksewasamiti.in</a></p>
+										<p><span>Website</span> <a href="https://akarsh17.github.io/JanakSewaSamiti/contact.html">janaksewasamiti.in</a></p>
 									</div>
 								</div>
 							</div>
