--- a/volunteer.html
+++ b/volunteer.html
@@ -99,7 +99,7 @@
 </div>
 <div class="col-md-6 col-lg-3">
   <div class="volunteer">
-   <div class="img" style="background-image: url(images/team-2.jpg);"></div>
+   <div class="img" style="background-image: url(images/team-2.jpeg);"></div>
    <div class="text text-2">
     <h3>Priyanshu Adhikari</h3>
     <span>Volunteer</span>
