--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
     <div class="col-md-7 heading-section text-center ftco-animate">
      <span class="subheading">From the desk of the President</span>
      <hr style="width:30%;background-color:#5DADE2">
-     <h2>Arun Mehta</h2>
+     <h2>Arun Mehra</h2>
      <div class="volunteer" align=center>
       <div class="img" style="background-image: url(images/Akarsh.png); width:250px; height:250px display:flexbox"></div>
       <!-- <div class="text text-1" style="width:40%;">
@@ -351,7 +351,7 @@ The present building at Plot no. 1162, sector 19, Faridabad, has been dedicated 
     <h2 class="footer-heading">Address</h2>
     <div class="block-23 mb-3">
       <ul>
-        <li><span class="icon fa fa-map"></span><span class="text">1162, Sectore-19, Faridabad, Haryana (U.P), India</span></li>
+        <li><span class="icon fa fa-map"></span><span class="text">1162, Sectore-19, Faridabad, Haryana, India</span></li>
         <li><a><span class="icon fa fa-phone"></span><span class="text"> 0129-4101162 </span></a></li>
         <li><a><span class="icon fa fa-paper-plane"></span><span class="text">info@janaksewasamiti.in</span></a></li>
       </ul>
