--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
 		</div>
 	</section> -->
 
-	<section class="ftco-section">
+	<!-- <section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center pb-5 mb-3">
 				<div class="col-md-7 heading-section text-center ftco-animate">
@@ -685,7 +685,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 
 	<section class="ftco-section ftco-no-pt">
@@ -804,7 +804,7 @@
 	    <h2 class="footer-heading">Address</h2>
 	    <div class="block-23 mb-3">
 	      <ul>
-	        <li><span class="icon fa fa-map"></span><span class="text">1162, Sectore-19, Faridabad, Haryana (U.P), India</span></li>
+	        <li><span class="icon fa fa-map"></span><span class="text">1162, Sectore-19, Faridabad, Haryana, India</span></li>
 	        <li><a><span class="icon fa fa-phone"></span><span class="text"> 0129-4101162 </span></a></li>
 	        <li><a><span class="icon fa fa-paper-plane"></span><span class="text">info@janaksewasamiti.in</span></a></li>
 	      </ul>
