--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
 										<a href="https://goo.gl/maps/ZBbFcqoY5LL7cqfd8" target="_blank"><span class="fa fa-map-marker"></span></a>
 									</div>
 									<div class="text">
-										<p><span>Address:</span> 1162, Sectore-19, Faridabad, Haryana (U.P), India </p>
+										<p><span>Address:</span> 1162, Sectore-19, Faridabad, Haryana, India </p>
 									</div>
 								</div>
 							</div>
@@ -250,7 +250,7 @@
 	    <h2 class="footer-heading">Address</h2>
 	    <div class="block-23 mb-3">
 	      <ul>
-	        <li><span class="icon fa fa-map"></span><span class="text">1162, Sectore-19, Faridabad, Haryana (U.P), India</span></li>
+	        <li><span class="icon fa fa-map"></span><span class="text">1162, Sectore-19, Faridabad, Haryana, India</span></li>
 	        <li><a><span class="icon fa fa-phone"></span><span class="text"> 0129-4101162 </span></a></li>
 	        <li><a><span class="icon fa fa-paper-plane"></span><span class="text">info@janaksewasamiti.in</span></a></li>
 	      </ul>
