--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 		</div>
 	</section>
 
-	<section class="ftco-section ftco-no-pb">
+	<!-- <section class="ftco-section ftco-no-pb">
 		<div class="container">
 			<div class="row justify-content-center pb-5 mb-3">
 				<div class="col-md-7 heading-section text-center ftco-animate">
@@ -369,7 +369,10 @@
 						<a href="#" class="img w-100" style="background-image: url(images/causes-1.jpg);"></a>
 						<div class="text p-3">
 							<h2><a href="#">Save the poor children from hunger</a></h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+							<p>Far far away, behind the word mountains, far from the countries Vokalia</p> -->
+
+							<!-- ----------------------------------------- -->
+
 							<!-- <div class="goal mb-4">
 								<p><span>$3,800</span> to go</p>
 								<div class="progress" style="height:20px">
@@ -377,15 +380,18 @@
 								</div>
 							</div> -->
 							<!-- <p><a href="#" class="btn btn-light w-100">Donate Now</a></p> -->
-						</div>
+						<!-- </div>
 					</div>
 				</div>
-				<div class="col-md-6 col-lg-3">
+
+				<!------------------------------------------------------------------- -->
+				<!-- <div class="col-md-6 col-lg-3">
 					<div class="causes causes-2 text-center ftco-animate">
 						<a href="#" class="img w-100" style="background-image: url(images/causes-2.jpg);"></a>
 						<div class="text p-3">
 							<h2><a href="#">Save the poor children from hunger</a></h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+							<p>Far far away, behind the word mountains, far from the countries Vokalia</p> --> -->
+							<!-- --------------------------------------------------------- -->
 							<!-- <div class="goal mb-4">
 								<p><span>$3,800</span> to go</p>
 								<div class="progress" style="height:20px">
@@ -393,7 +399,9 @@
 								</div>
 							</div> -->
 							<!-- <p><a href="#" class="btn btn-light w-100">Donate Now</a></p> -->
-						</div>
+
+							<!-- --------------------------------------------------------- -->
+						<!-- </div>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3">
@@ -401,7 +409,7 @@
 						<a href="#" class="img w-100" style="background-image: url(images/causes-3.jpg);"></a>
 						<div class="text p-3">
 							<h2><a href="#">Save the poor children from hunger</a></h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+							<p>Far far away, behind the word mountains, far from the countries Vokalia</p> -->
 							<!-- <div class="goal mb-4">
 								<p><span>$3,800</span> to go</p>
 								<div class="progress" style="height:20px">
@@ -409,7 +417,7 @@
 								</div>
 							</div> -->
 							<!-- <p><a href="#" class="btn btn-light w-100">Donate Now</a></p> -->
-						</div>
+						<!-- </div>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3">
@@ -417,7 +425,7 @@
 						<a href="#" class="img w-100" style="background-image: url(images/causes-4.jpg);"></a>
 						<div class="text p-3">
 							<h2><a href="#">Save the poor children from hunger</a></h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+							<p>Far far away, behind the word mountains, far from the countries Vokalia</p> -->
 							<!-- <div class="goal mb-4">
 								<p><span>$3,800</span> to go</p>
 								<div class="progress" style="height:20px">
@@ -425,12 +433,12 @@
 								</div>
 							</div> -->
 							<!-- <p><a href="#" class="btn btn-light w-100">Donate Now</a></p> -->
-						</div>
+						<!-- </div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<!-- <section class="ftco-counter" id="section-counter">
 		<div class="container">
