--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
 										<a href="https://goo.gl/maps/ZBbFcqoY5LL7cqfd8" target="_blank"><span class="fa fa-map-marker"></span></a>
 									</div>
 									<div class="text">
-										<p><span>Address:</span> 1162, Sectore-19, Faridabad, Haryana, India </p>
+										<p><span>Address:</span> 1162, Sector-19, Faridabad, Haryana, India </p>
 									</div>
 								</div>
 							</div>
