--- a/about.html
+++ b/about.html
@@ -349,7 +349,7 @@
     <h2 class="footer-heading">Address</h2>
     <div class="block-23 mb-3">
       <ul>
-        <li><span class="icon fa fa-map"></span><span class="text">1162, Sectore-19, Faridabad, Haryana, India</span></li>
+        <li><span class="icon fa fa-map"></span><span class="text">1162, Sector-19, Faridabad, Haryana, India</span></li>
         <li><a><span class="icon fa fa-phone"></span><span class="text"> 0129-4101162 </span></a></li>
         <li><a><span class="icon fa fa-paper-plane"></span><span class="text">info@janaksewasamiti.in</span></a></li>
       </ul>
