--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
 
 
 <h3 style="color:#4B878BFF; text-align:center"><br></br><br><b>Facilities provided by Sneh Aashram</br></b><br></h3>
- <div class="row" style="height:390px">
+ <div class="row">
   <div class="col-md-3 services-2 w-100 text-center">
    <div class="icon icon-1 d-flex align-items-center justify-content-center"><span class="fa fa-bed"></span></div>
    <div class="text">
