--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
 				<div class="col-md-6 col-lg-3">
 					<div class="volunteer">
 						<div class="img" style="background-image: url(images/Akarsh.png);"></div>
-						<div class="text text-1">
+						<div class="text text-1" style="background-color:#67b991">
 							<h3>Akarsh Banthiya</h3>
 							<span>Volunteer</span>
 						</div>
