--- a/contact.html
+++ b/contact.html
@@ -126,10 +126,10 @@
 							<div class="col-md-3">
 								<div class="dbox w-100 text-center">
 									<div class="icon bg-secondary d-flex align-items-center justify-content-center">
-										<a href="tel://0129-4101162"><span class="fa fa-phone"></span></a>
+										<a href="tel:0129-4101162"><span class="fa fa-phone"></span></a>
 									</div>
 									<div class="text">
-										<p><span>Phone:</span> <a href="tel://0129-4101162">0129-4101162</a></p>
+										<p><span>Phone:</span> <a href="tel:0129-4101162">0129-4101162</a></p>
 									</div>
 								</div>
 							</div>
