--- a/blog.html
+++ b/blog.html
@@ -59,7 +59,7 @@
        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
        <li class="nav-item"><a href="volunteer.html" class="nav-link">Volunteer</a></li>
-       <li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li>
+       <li class="nav-item active"><a href="blog.html" class="nav-link">Image Gallery</a></li>
        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
      </ul>
    </div>
@@ -73,12 +73,12 @@
     <div class="row no-gutters slider-text align-items-end">
       <div class="col-md-9 ftco-animate pb-5">
        <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Blog <i class="ion-ios-arrow-forward"></i></span></p>
-       <h1 class="mb-0 bread">Blog</h1>
+       <h1 class="mb-0 bread">Image Gallery</h1>
      </div>
    </div>
  </div>
 </section>
-
+<!--
 <section class="ftco-section">
   <div class="container">
     <div class="row d-flex">
@@ -228,7 +228,7 @@
   </div>
 </div>
 </div>
-</section>
+</section> -->
 
 
 <footer class="footer">
@@ -265,7 +265,7 @@
       <li><a href="index.html" class="py-2 d-block">Home</a></li>
       <li><a href="about.html" class="py-2 d-block">About</a></li>
       <li><a href="volunteer.html" class="py-2 d-block">Volunteer</a></li>
-      <li><a href="blog.html" class="py-2 d-block">Blog</a></li>
+      <li><a href="blog.html" class="py-2 d-block">Inage Gallery</a></li>
       <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
     </ul>
   </div>
@@ -273,7 +273,7 @@
     <h2 class="footer-heading">Address</h2>
     <div class="block-23 mb-3">
       <ul>
-        <li><span class="icon fa fa-map"></span><span class="text">1162, Sector-19, Faridabad, Haryana, India</span></li>
+        <li><span class="icon fa fa-map"></span><span class="text">1162, Sectore-19, Faridabad, Haryana, India</span></li>
         <li><a><span class="icon fa fa-phone"></span><span class="text"> 0129-4101162 </span></a></li>
         <li><a><span class="icon fa fa-paper-plane"></span><span class="text">info@janaksewasamiti.in</span></a></li>
       </ul>
