--- a/causes.html
+++ b/causes.html
@@ -283,7 +283,7 @@
     </ul>
   </div>
   <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-    <h2 class="footer-heading">Have a Questions?</h2>
+    <h2 class="footer-heading">Address</h2>
     <div class="block-23 mb-3">
       <ul>
         <li><span class="icon fa fa-map"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
