--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 					<li class="nav-item"><a href="volunteer.html" class="nav-link">Volunteer</a></li>
 					<!-- <li class="nav-item"><a href="causes.html" class="nav-link">Causes</a></li> -->
-					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+					<li class="nav-item"><a href="blog.html" class="nav-link">Image Gallery</a></li>
 					<li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
 					<li class="nav-item cta"><a href="contact.html" class="nav-link">Donate</a></li>
 				</ul>
@@ -242,7 +242,7 @@
 	      <li><a href="index.html" class="py-2 d-block">Home</a></li>
 	      <li><a href="about.html" class="py-2 d-block">About</a></li>
 	      <li><a href="volunteer.html" class="py-2 d-block">Volunteer</a></li>
-	      <li><a href="blog.html" class="py-2 d-block">Blog</a></li>
+	      <li><a href="blog.html" class="py-2 d-block">Image Gallery</a></li>
 	      <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
 	    </ul>
 	  </div>
