--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,7 @@
   <div class="container">
     <div class="row no-gutters slider-text align-items-end">
       <div class="col-md-9 ftco-animate pb-5">
-       <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Blog <i class="ion-ios-arrow-forward"></i></span></p>
+       <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Image Gallery<i class="ion-ios-arrow-forward"></i></span></p>
        <h1 class="mb-0 bread">Image Gallery</h1>
      </div>
    </div>
