--- a/index.html
+++ b/index.html
@@ -754,6 +754,118 @@
 		</div>
 	</section>
 
+<!-- Visitors - Opinions -->
+
+<section class="ftco-section testimony-section">
+ <div class="overlay"></div>
+ <div class="container">
+  <div class="row justify-content-center pb-5">
+    <div class="col-md-7 heading-section heading-section-white text-center ftco-animate">
+     <!-- <span class="subheading">Testimony</span> -->
+     <h2>Opinions of Sneh Aashram Visitors</h2>
+   </div>
+ </div>
+ <div class="row ftco-animate">
+  <div class="col-md-12">
+    <div class="carousel-testimony owl-carousel">
+			<div class="item">
+				<div class="testimony-wrap d-flex">
+					<!-- <div class="user-img" style="background-image: url(images/person_3.jpg)"> -->
+					<!-- </div> -->
+					<div class="-4">
+						<!-- <span class="quote d-flex align-items-center justify-content-center"> -->
+							<!-- <i class="fa fa-quote-left"></i> -->
+						<!-- </span> -->
+						<!-- <p class="rate">
+							<span class="fa fa-star"></span>
+							<span class="fa fa-star"></span>
+							<span class="fa fa-star"></span>
+							<span class="fa fa-star"></span>
+							<span class="fa fa-star"></span>
+						</p> -->
+						<p>This is just the kind of socio-religious institution that is the need of the hour for old people. The patron and other good persons involved in the running of this place are noble and kind. My good wishes to them all.</p>
+						<p>Mr. R.P. Ojha<br>Retired IAS officer</p>
+						<span></span>
+					</div>
+				</div>
+			</div>
+
+			<div class="item">
+				<div class="testimony-wrap d-flex">
+					<!-- <div class="user-img" style="background-image: url(images/person_3.jpg)"> -->
+					<!-- </div> -->
+					<div class="-4">
+						<!-- <span class="quote d-flex align-items-center justify-content-center"> -->
+							<!-- <i class="fa fa-quote-left"></i> -->
+						<!-- </span> -->
+						<!-- <p class="rate">
+							<span class="fa fa-star"></span>
+							<span class="fa fa-star"></span>
+							<span class="fa fa-star"></span>
+							<span class="fa fa-star"></span>
+							<span class="fa fa-star"></span>
+						</p> -->
+						<p>This is just the kind of socio-religious institution that is the need of the hour for old people. The patron and other good persons involved in the running of this place are noble and kind. My good wishes to them all.</p>
+						<p class="name">Mark Huff</p>
+						<span class="position">Businesswoman</span>
+					</div>
+				</div>
+			</div>
+
+			<div class="item">
+				<div class="testimony-wrap d-flex">
+					<!-- <div class="user-img" style="background-image: url(images/person_3.jpg)"> -->
+					<!-- </div> -->
+					<div class="-4">
+						<!-- <span class="quote d-flex align-items-center justify-content-center"> -->
+							<!-- <i class="fa fa-quote-left"></i> -->
+						<!-- </span> -->
+						<!-- <p class="rate">
+							<span class="fa fa-star"></span>
+							<span class="fa fa-star"></span>
+							<span class="fa fa-star"></span>
+							<span class="fa fa-star"></span>
+							<span class="fa fa-star"></span>
+						</p> -->
+						<p>This is just the kind of socio-religious institution that is the need of the hour for old people. The patron and other good persons involved in the running of this place are noble and kind. My good wishes to them all.</p>
+						<p class="name">Mark Huff</p>
+						<span class="position">Businesswoman</span>
+					</div>
+				</div>
+			</div>
+
+			<div class="item">
+				<div class="testimony-wrap d-flex">
+					<!-- <div class="user-img" style="background-image: url(images/person_3.jpg)"> -->
+					<!-- </div> -->
+					<div class="-4">
+						<!-- <span class="quote d-flex align-items-center justify-content-center"> -->
+							<!-- <i class="fa fa-quote-left"></i> -->
+						<!-- </span> -->
+						<!-- <p class="rate">
+							<span class="fa fa-star"></span>
+							<span class="fa fa-star"></span>
+							<span class="fa fa-star"></span>
+							<span class="fa fa-star"></span>
+							<span class="fa fa-star"></span>
+						</p> -->
+						<p>This is just the kind of socio-religious institution that is the need of the hour for old people. The patron and other good persons involved in the running of this place are noble and kind. My good wishes to them all.</p>
+						<p class="name">Mark Huff</p>
+						<span class="position">Businesswoman</span>
+					</div>
+				</div>
+			</div>
+
+</div>
+</div>
+</div>
+</div>
+</section>
+
+
+
+	<!-- End -->
+
 	<section class="ftco-hireme bg-secondary">
 		<div class="container">
 			<div class="row justify-content-between">
