--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
 						</p> -->
 						<p>This is just the kind of socio-religious institution that is the need of the hour for old people. The patron and other good persons involved in the running of this place are noble and kind. My good wishes to them all.</p>
 						<p>Mr. R.P. Ojha<br>Retired IAS officer</p>
-						<span></span>
+						<!-- <span></span> -->
 					</div>
 				</div>
 			</div>
@@ -806,8 +806,8 @@
 							<span class="fa fa-star"></span>
 						</p> -->
 						<p>This is just the kind of socio-religious institution that is the need of the hour for old people. The patron and other good persons involved in the running of this place are noble and kind. My good wishes to them all.</p>
-						<p class="name">Mark Huff</p>
-						<span class="position">Businesswoman</span>
+						<p>Mr. R.P. Ojha<br>Retired IAS officer</p>
+						<!-- <span class="position">Businesswoman</span> -->
 					</div>
 				</div>
 			</div>
@@ -828,8 +828,8 @@
 							<span class="fa fa-star"></span>
 						</p> -->
 						<p>This is just the kind of socio-religious institution that is the need of the hour for old people. The patron and other good persons involved in the running of this place are noble and kind. My good wishes to them all.</p>
-						<p class="name">Mark Huff</p>
-						<span class="position">Businesswoman</span>
+						<p>Mr. R.P. Ojha<br>Retired IAS officer</p>
+
 					</div>
 				</div>
 			</div>
@@ -850,8 +850,7 @@
 							<span class="fa fa-star"></span>
 						</p> -->
 						<p>This is just the kind of socio-religious institution that is the need of the hour for old people. The patron and other good persons involved in the running of this place are noble and kind. My good wishes to them all.</p>
-						<p class="name">Mark Huff</p>
-						<span class="position">Businesswoman</span>
+						<p>Mr. R.P. Ojha<br>Retired IAS officer</p>
 					</div>
 				</div>
 			</div>
