--- a/about.html
+++ b/about.html
@@ -93,9 +93,14 @@
      </div> -->
    </div>
       <span class="subheading" style="color:#4B878BFF">President, Janak Sewa Samiti</span>
-      <br><span class="subheading">Greetings from Janak Sewa Samiti</span>
-      <br><div align="justify" style="color:#626567">It's with great pleasure and some amount of satisfaction that we bring this souvenir to you. Great pleasure-because the journey that began with the foundation of the Janak Sewa Samiti in 1975 is truly on course; and satisfaction as the Samiti has been able to offer its humble ahuti' in this 'yajna. The present building at Plot no. 1162, sector 19, Faridabad, has been dedicated to the care of the old since 1996 and is fondly known as the Sneh Ashram. The Ashram can now home upto 50 senior citizens, made possible by recent expansions. Our endeavour is to provide a homely and friendly environment to enable senior citizens to lead their golden years with dignity and self-respect. The sight of these greying minds strolling in the gardens every morning inspires us. The residents of the Ashram eagerly look forward to outdoor excursions being regularly organised by the JSS team. Apart from the care of the old, the Samiti also caters to the needs of the poor. It adopts five families who have no known source of Income of their own and provides them complete ration for the whole year. The in-house dispensary manned by a qualified allopathic doctor provides services to the general public as well.</div>
-    <br><span class="subheading" style="color:#4B878BFF">Grow old along with me! <br> The best is yet to be,<br>The last of life, for which the first was made<br> -Robert Browing</span>
+      <br><span class="subheading">Namaskar Doston!</span>
+      <br><div align="justify" style="color:#626567">It is with some satisfaction that a humble journey started way back in 1975, has given us some cause for pride. Sneh Ashram, the old age home was conceptualised with the aim to provide the helpless elderly, a life of love, dignity & pride in their golden years.
+<br>In this journey, I was not alone. I was joined by YOU, my friends who never left me in distress, who never complained, just had faith in me and my vision. How can I forget my ashramites, who have unstintingly stood by my side, nothing deterred them. I cannot thank you enough for this, and yet this journey is still on. So Let us make it more purposeful and joyous.
+<br>This year, we have a special reason to rejoice, our long standing wish to provide easier mobility for the tiring joints has come true with the installation of a quality elevator.
+<br>Friends It's surreal experience to watch the happiness and joy on the faces of my elders when they interact with the visiting children and young techies, singing and dancing with them, celebrating their birthday with them.
+<br>I invite you all to share your love and joy with these senior. Ashamites are grateful for your cheques and would love to have your time too.
+<br><span style="color:#4B878BFF"><b>"Jeevamtah Bhadram Jaranam Asheemahi"</b></span>; let us live a long, happy and beneficial life.</div>
+    <br><span class="subheading" style="color:#4B878BFF">I love my age, old enough to know better, young enough not to care.<br>Experienced enough to do it Right.</span>
    </div>
  </div>
 
@@ -151,19 +156,36 @@
 </div>
 </div>
 <div class="col-md-3 services-2 w-100 text-center">
- <div class="icon icon-4 d-flex align-items-center justify-content-center"><span class="flaticon-university"></span></div>
+ <div class="icon icon-2 d-flex align-items-center justify-content-center"><span class="flaticon-university"></span></div>
  <div class="text">
   <h4>Temple and Sabhagrah</h4>
   <p>A Sabhagrah and Temple  for spiritual discourse and practice.</p>
 </div>
 </div>
 <div class="col-md-3 services-2 w-100 text-center">
- <div class="icon icon-4 d-flex align-items-center justify-content-center"><span class="fa fa-tv"></span></div>
+ <div class="icon icon-3 d-flex align-items-center justify-content-center"><span class="fa fa-tv"></span></div>
  <div class="text">
   <h4>Common Room</h4>
   <p>Common room with TV and indoor games .</p>
 </div>
 </div>
+
+<div class="col-md-3 services-2 w-100 text-center">
+ <div class="icon icon-4 d-flex align-items-center justify-content-center"><img src="images/Park.png" width=80 height=80 style="vertical-align:middle;margin:0px 50px"></img></div>
+ <div class="text">
+  <h4>Park</h4>
+  <p>A beautiful park has been developed in front of the ashram for outdoor activities.</p>
+</div>
+</div>
+
+<div class="col-md-3 services-2 w-100 text-center">
+ <div class="icon icon-1 d-flex align-items-center justify-content-center"><img src="images/elevator.png" width=60 height=60 style="vertical-align:middle;margin:0px 50px"></img></div>
+ <div class="text">
+  <h4>Elevator</h4>
+  <p>Equiped with a quality elevator.</p>
+</div>
+</div>
+
 </div>
 </div>
 </div>
