--- a/about.html
+++ b/about.html
@@ -171,7 +171,7 @@
 </div>
 
 <div class="col-md-3 services-2 w-100 text-center">
- <div class="icon icon-4 d-flex align-items-center justify-content-center"><img src="images/Park.png" width=80 height=80 style="vertical-align:middle;margin:0px 50px"></img></div>
+ <div class="icon icon-4 d-flex align-items-center justify-content-center"><img src="images/Park.png" width=80 height=80> </div>
  <div class="text">
   <h4>Park</h4>
   <p>A beautiful park has been developed in front of the ashram for outdoor activities.</p>
@@ -179,7 +179,7 @@
 </div>
 
 <div class="col-md-3 services-2 w-100 text-center">
- <div class="icon icon-1 d-flex align-items-center justify-content-center"><img src="images/elevator.png" width=60 height=60 style="vertical-align:middle;margin:0px 50px"></img></div>
+ <div class="icon icon-1 d-flex align-items-center justify-content-center"><img src="images/elevator.png" width=60 height=60></img></div>
  <div class="text">
   <h4>Elevator</h4>
   <p>Equiped with a quality elevator.</p>
