--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
  <div class="icon icon-4 d-flex align-items-center justify-content-center"><span class="fa fa-book"></span></div>
  <div class="text">
   <h4>Library</h4>
-  <p>A Library, with about 1500 books.</p>
+  <p>A Library well equipped with about 1500 books and daily newspapers.</p>
 </div>
 </div>
 <div class="col-md-3 services-2 w-100 text-center">
