--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 					<div class="">
 							<i class="fa fa-quote-left"></i>
 						</span>
-						<p style="color:red">Well organized, well maintained and provided with every modern facility. The residents are highlt satisfied and are living happily. The organisers of this Ashram are well-meaning, highlt-dedicated selfless personalities. My best wishes to the residents and highlle-spirited organisers.</p>
+						<p style="color:red">Well organized, well maintained and provided with every modern facility. The residents are highly satisfied and are living happily. The organisers of this Ashram are well-meaning, highly-dedicated selfless personalities. My best wishes to the residents and highly-spirited organisers.</p>
 						<p>D.R. Malhotra<br>Resident, Faridabad &nbsp;&nbsp;<i class="fa fa-quote-right"></i></p>
 					</div>
 				</div>
