--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<?php include('contactform.php')?; ?>
 	<link rel="icon" href="images/icon.png">
 	<title>Janak Sewa Samiti</title>
 	<meta charset="utf-8">
@@ -186,7 +187,7 @@
 											</div>
 											<div class="col-md-12">
 												<div class="form-group">
-													<input type="submit" value="Send Message" class="btn btn-primary">
+													<input type="submit" name="sendmail" value="Send Message" data-submit="...sending your message!" class="btn btn-primary">
 													<div class="submitting"></div>
 												</div>
 											</div>
