--- a/index.html
+++ b/index.html
@@ -354,63 +354,84 @@
 		</div>
 	</section>
 
-	<section class="ftco-section ftco-no-pt">
-		<div class="container">
-			<div class="row justify-content-center pb-5 mb-3">
-				<div class="col-md-7 heading-section text-center ftco-animate">
-					<span class="subheading">Volunteer</span>
-					<h2><a href="volunteer.html">Our Volunteer</a></h2>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6 col-lg-3">
-					<div class="volunteer">
-						<div class="img" style="background-image: url(images/Akarsh.png);"></div>
-						<div class="text text-1" style="background-color:#67b991">
-							<h3>Akarsh Banthiya</h3>
-							<span>Volunteer</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3">
-					<div class="volunteer">
-						<div class="img" style="background-image: url(images/team-2.jpeg);"></div>
-						<div class="text text-2">
-							<h3>Priyanshu Adhikari</h3>
-							<span>Volunteer</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3">
-					<div class="volunteer">
-						<div class="img" style="background-image: url(images/team3.jpeg);"></div>
-						<div class="text text-3">
-							<h3>Vanshika Nehra</h3>
-							<span>Volunteer</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3">
-					<div class="volunteer">
-						<div class="img" style="background-image: url(images/team-1.jpg);"></div>
-						<div class="text text-4">
-							<h3>Sarang Sharma</h3>
-							<span>Volunteer</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3">
-					<div class="volunteer">
-						<div class="img" style="background-image: url(images/team5.jpeg);"></div>
-						<div class="text text-4">
-							<h3>Simran Bafna</h3>
-							<span>Volunteer</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+	<section class="ftco-section">
+	 <div class="container">
+	  <div class="row justify-content-center pb-5 mb-3">
+	    <div class="col-md-7 heading-section text-center ftco-animate">
+	     <span class="subheading">Volunteer</span>
+	     <h2>Our Expert Volunteer</h2>
+	   </div>
+	 </div>
+	 <div class="row">
+	   <div class="col-md-6 col-lg-3">
+	    <div class="volunteer">
+	     <div class="img" style="background-image: url(images/Akarsh.png);"></div>
+	     <div style="background-color:#527FA0; width:85%"class="text text-2">
+	      <h3>Akarsh Banthiya</h3>
+	      <span>Volunteer</span>
+	    </div>
+	  </div>
+	</div>
+	<div class="col-md-6 col-lg-3">
+	  <div class="volunteer">
+	   <div class="img" style="background-image: url(images/team-2.jpeg);"></div>
+	   <div class="text text-4" style="width:85%">
+	    <h3>Priyanshu Adhikari</h3>
+	    <span>Volunteer</span>
+	  </div>
+	</div>
+	</div>
+	<div class="col-md-6 col-lg-3">
+	  <div class="volunteer">
+	   <div class="img" style="background-image: url(images/team3.jpeg);"></div>
+	   <div class="text text-2" style="width:85%">
+	    <h3>Vanshika Nehra</h3>
+	    <span>Volunteer</span>
+	  </div>
+	</div>
+	</div>
+	<div class="col-md-6 col-lg-3">
+	  <div class="volunteer">
+	   <div class="img" style="background-image: url(images/team-1.jpg);"></div>
+	   <div class="text text-4" style="background-color:#EC732F;width:85%">
+	    <h3>Sarang Sharma</h3>
+	    <span>Volunteer</span>
+	  </div>
+	</div>
+	</div>
+
+	<div class="col-md-6 col-lg-3">
+	  <div class="volunteer">
+	   <div class="img" style="background-image: url(images/team5.jpeg);"></div>
+	   <div class="text text-4" style="background-color:#24807e; width:85%">
+	    <h3>Simran Bafna</h3>
+	    <span>Volunteer</span>
+	  </div>
+	</div>
+	</div>
+	</div>
+	</div>
 	</section>
+
+
+<!-- Direct Donation Details-->
+<section class="ftco-counter" id="section-counter">
+	<div class="container" style="justify-content:center;">
+		<div class="row"  style=" justify-content:center; ">
+			<div class="col-md-7 mb-7 mb-md-0 text-center text-md-left">
+				<h2  style="color: #fff; font-size: 22px;"><b>Bank details for Direct Transfer:</b> <br>JANAK SEWA SAMITI (REGD.)<br> A/c No.: 65115323338<br> IFSC CODE: SBIN0051172<br>State Bank of India,HUDA Market,<br>Sector-19,Faridabad - 121002 (Haryana)</h2>
+
+			</div>
+			<hr>
+				<span style="margin:70px;"><a style="size:100px" href="#" class="btn btn-white btn-outline-white">Donate Now</a></span>
+		</div>
+	</div>
+</section>
+
+
+<!-- End -->
+
+
 
 <!-- Visitors - Opinions -->
 
