--- a/about.html
+++ b/about.html
@@ -192,17 +192,6 @@
 </div>
 </section>
 
-<!-- <section class="ftco-counter" id="section-counter">
- <div class="container">
-  <div class="row">
-   <div class="col-md-3 mb-5 mb-md-0 text-center text-md-left">
-    <h2 class="font-weight-bold" style="color: #fff; font-size: 22px;">We're on a mission to help all your problems</h2>
-    <a href="#" class="btn btn-white btn-outline-white">Donate Now</a>
-  </div>
-  </div>
-</div>
-</section> -->
-
 <section class="ftco-section testimony-section">
  <div class="overlay"></div>
  <div class="container">
@@ -339,7 +328,7 @@
       <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100010958287622" target="_blank" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
       <li class="ftco-animate"><a href="https://www.youtube.com/channel/UCooMuiq5fnbR0MlcQ3vLdsQ/" target="_blank" data-toggle="tooltip" data-placement="top" title="YouTube"><span class="fa fa-youtube-play"></span></a></li>
     </ul>
-    <p><a href="#" class="btn btn-quarternary">Donate Now</a></p>
+    <p><a href="index.html#donate" class="btn btn-quarternary">Donate Now</a></p>
   </div>
   <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
 
