--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,6 @@
 					<!-- <li class="nav-item"><a href="causes.html" class="nav-link">Causes</a></li> -->
 					<li class="nav-item"><a href="blog.html" class="nav-link">Image Gallery</a></li>
 					<li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
-					<li class="nav-item cta"><a href="contact.html" class="nav-link">Donate</a></li>
 				</ul>
 			</div>
 		</div>
@@ -193,7 +192,7 @@
 	      <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100010958287622" target="_blank" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
 	      <li class="ftco-animate"><a href="https://www.youtube.com/channel/UCooMuiq5fnbR0MlcQ3vLdsQ/" target="_blank" data-toggle="tooltip" data-placement="top" title="YouTube"><span class="fa fa-youtube-play"></span></a></li>
 	    </ul>
-	    <p><a href="#" class="btn btn-quarternary">Donate Now</a></p>
+	    <p><a href="index.html#donate" class="btn btn-quarternary">Donate Now</a></p>
 	  </div>
 	  <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
 
