--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 		</div>
 	</section>
 
-	<section class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb img">
+	<section id="donate" class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb img">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -423,7 +423,7 @@
 
 			</div>
 			<hr>
-				<span style="margin:70px;"><a style="size:100px" href="#" class="btn btn-white btn-outline-white">Donate Now</a></span>
+				<span style="margin:70px;"><a style="size:100px" href="#donate" class="btn btn-white btn-outline-white">Donate Now</a></span>
 		</div>
 	</div>
 </section>
@@ -596,7 +596,7 @@
 	      <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100010958287622" target="_blank" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
 	      <li class="ftco-animate"><a href="https://www.youtube.com/channel/UCooMuiq5fnbR0MlcQ3vLdsQ/" target="_blank" data-toggle="tooltip" data-placement="top" title="YouTube"><span class="fa fa-youtube-play"></span></a></li>
 	    </ul>
-	    <p><a href="#" class="btn btn-quarternary">Donate Now</a></p>
+	    <p><a href="#donate" class="btn btn-quarternary">Donate Now</a></p>
 	  </div>
 	  <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
 
