--- a/volunteer.html
+++ b/volunteer.html
@@ -227,7 +227,7 @@
       <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100010958287622" target="_blank" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
       <li class="ftco-animate"><a href="https://www.youtube.com/channel/UCooMuiq5fnbR0MlcQ3vLdsQ/" target="_blank" data-toggle="tooltip" data-placement="top" title="YouTube"><span class="fa fa-youtube-play"></span></a></li>
     </ul>
-    <p><a href="#" class="btn btn-quarternary">Donate Now</a></p>
+    <p><a href="index.html#donate" class="btn btn-quarternary">Donate Now</a></p>
   </div>
   <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
 
